validation form added

--- a/web-javascript/index.html
+++ b/web-javascript/index.html
@@ -13,6 +13,10 @@
     <p>Lower paragraph</p>
     <p>Another Lower paragraph</p>
     <div id="div1">This is div one</div>
+
+    <input type="text" id="myForm">
+
+    <button>Click Me</button>
     <script src="main.js"></script>
 </body>
 
