convert set into array

--- a/signup-form/index.html
+++ b/signup-form/index.html
@@ -45,7 +45,7 @@
     </style>
 </head>
 <body>
-    <form class="myform validate" id="myform">
+    <form class="myform" id="myform">
         <fieldset>
             <legend><h2>Register yourself</h2></legend>
             <p>
